# kalibr-bsplines

./: BSpline.cpp  BSpline.hpp  BSplinePose.cpp  BSplinePose.hpp  CMakeLists.txt  RotationVector.cpp  RotationalKinematics.cpp  RotationalKinematics.hpp  linear_solver_cholmod.h  linear_solver_eigen.h  marginal_covariance_cholesky.cpp  matrix_structure.cpp  rotations.cpp  sparse_block_matrix.h  sparse_block_matrix.hpp  sparse_helper.cpp  sparse_helper.h  transformations.cpp  transformations.hpp
