cmake_minimum_required(VERSION 3.1)
project(bsplines)

find_path(Cholmod_INCLUDE_DIR NAMES cholmod.h PATH_SUFFIXES suitesparse)
find_library(Cholmod_LIBRARY NAMES cholmod)
find_package(Eigen3 REQUIRED)
find_package(Boost REQUIRED)
add_library(${PROJECT_NAME}_curve STATIC BSpline.cpp matrix_structure.cpp sparse_helper.cpp marginal_covariance_cholesky.cpp)
add_library(${PROJECT_NAME}_pose STATIC BSplinePose.cpp RotationalKinematics.cpp RotationVector.cpp rotations.cpp transformations.cpp)
target_include_directories(${PROJECT_NAME}_curve PUBLIC ${Cholmod_INCLUDE_DIR})
target_link_libraries(${PROJECT_NAME}_curve PUBLIC Eigen3::Eigen Boost::boost PRIVATE ${Cholmod_LIBRARY})
target_link_libraries(${PROJECT_NAME}_pose PUBLIC ${PROJECT_NAME}_curve)
add_library(${PROJECT_NAME}::curve ALIAS ${PROJECT_NAME}_curve)
add_library(${PROJECT_NAME}::pose ALIAS ${PROJECT_NAME}_pose)
